[tool.poetry]
name = "streamlit-test-app"
version = "0.1.0"
description = ""
authors = ["asimjalwana <jalwanamohammad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
